--- a/src/index.html
+++ b/src/index.html
@@ -2,12 +2,14 @@
 <html lang="en">
 
 <head>
+  <base href="/">
   <meta charset="utf-8">
   <title>blang</title>
-  <base href="/">
+
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <script src="assets/js/inflate.min.js"></script>
 </head>
 
 <body>
